# summa_testing

./: CMakeLists.txt  README.md
tests/: summatest.cpp
